<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Frame for labels -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/status_label"
            android:text="@string/status_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/coarse_permission_label"
            android:text="@string/coarse_permission_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/status_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/fine_permission_label"
            android:text="@string/fine_permission_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/coarse_permission_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/background_permission_label"
            android:text="@string/background_permission_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/fine_permission_label"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Frame for values -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/frame_labels">

        <TextView
            android:id="@+id/status_value"
            style="@style/display_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/coarse_permission_value"
            style="@style/display_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/status_value"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/fine_permission_value"
            style="@style/display_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/coarse_permission_value"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/background_permission_value"
            style="@style/display_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/fine_permission_value"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCurrentLocation"
        android:text="@string/button_display_location"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/frame_labels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Frame for position labels -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_position_labels"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCurrentLocation"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/latitude_label"
            android:text="@string/latitude_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>